[tool.poetry]
name = "openstates-realtime"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "openstates_realtime"}]

[tool.poetry.dependencies]
python = "^3.9"
openstates = "^6.14.0"
zappa = "^0.56.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
