[tool.poetry]
name = "openstates-realtime"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openstates = "^6.20.10"
zappa = "^0.56.1"
psycopg2-binary = "^2.9.5"
textract = "^1.6.5"
extract-msg = "0.28.7"
black = "^24.4.2"
setuptools = "69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 79

[tool.black]
line-length = 79

